...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_username_editable_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/content_description_edit_username"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/account_username_max_length"
        app:hintEnabled="false"
        app:layout_constraintTop_toTopOf="@+id/account_username"
        app:layout_constraintBottom_toBottomOf="@+id/account_username"
        app:layout_constraintStart_toStartOf="@+id/account_username"
        app:layout_constraintEnd_toEndOf="@+id/account_username"
        style="@style/Text.Edit.Wrapper"
        android:visibility="gone"
...
